--- a/models/north_asia/ntaitg_integration/sales/_sources_ntaitg_integration__sales.yml
+++ b/models/north_asia/ntaitg_integration/sales/_sources_ntaitg_integration__sales.yml
@@ -25,6 +25,7 @@ sources:
             config:
               store_failures: true
               schema: ntawks_integration
+              severity: error
         - test_lookup:
             select_columns: ["year_code", "sales_office_code_code", "sales_group_code_code", "product_h2_code", "product_h4_code"]
             column: "(upper(trim(product_h2_code)),upper(trim(product_h4_code)))"
@@ -36,6 +37,7 @@ sources:
             config:
               store_failures: true
               schema: ntawks_integration
+              severity: error
     - name: sdl_kr_coupang_productsalereport
       tags: ["coupang_ppm_file", "ingestion"]
       tests:
@@ -75,6 +77,7 @@ sources:
               config:
                 store_failures: true
                 schema: ntawks_integration
+                severity: error
           - test_duplicate:
               select_columns: ["sales_grp_cd","src_sys_cd","cust_prod_cd","ean_cd","ctry_cd"]
               group_by_columns: ["sales_grp_cd","src_sys_cd","cust_prod_cd","ean_cd","ctry_cd"]
@@ -82,6 +85,7 @@ sources:
               config:
                 store_failures: true
                 schema: ntawks_integration
+                severity: error
     - name: sdl_mds_kr_sales_store_map
       tests:
       - test_null:
@@ -91,6 +95,7 @@ sources:
           config:
             store_failures: true
             schema: ntawks_integration
+            severity: error
       - test_duplicate:
           select_columns: ["sls_ofc_code","channel","store_type","sales_group_code_code","code"]
           group_by_columns: ["sls_ofc_code","channel","store_type","sales_group_code_code","code"]
@@ -98,6 +103,7 @@ sources:
           config:
             store_failures: true
             schema: ntawks_integration
+            severity: error
             
   - name: ntaitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
