--- a/models/thailand/thaitg_integration/_sources_thaitg_integration__test.yml
+++ b/models/thailand/thaitg_integration/_sources_thaitg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: thawks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: nnaras01_workspace
+    schema: thawks_integration
     quoting:
       database: false
       schema: false
