Revert "Multifile/DQ check changes Asp_Regional 20240919"

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,8 +40,16 @@ tests:
   DNA_CORE_ASP:
     philippines:
       +severity: warn
+      phlitg_integration:
+        sfmc:
+          +severity: error
     thailand:
       +severity: warn
+      thaitg_integration:
+        pop6: 
+          +severity: error
+        sfmc:
+          +severity: error
     malaysia:
       +severity: warn
     vietnam:
@@ -50,6 +58,9 @@ tests:
       +severity: warn
     singapore:
       +severity: warn
+      sgpitg_integration:
+        pop6: 
+          +severity: error
     north_asia:
       +severity: warn
     hcp:
@@ -58,11 +69,12 @@ tests:
       +severity: warn
     japan:
       +severity: warn
+      jpnitg_integration:
+        pop6: 
+          +severity: error
     japan_dcl:
       +severity: warn    
     pacific:
-      +severity: warn
-    asp_regional:
       +severity: warn
 
 models:
