--- a/models/singapore/sgpitg_integration/_sources_sgpitg_integration_test.yml
+++ b/models/singapore/sgpitg_integration/_sources_sgpitg_integration_test.yml
@@ -9,6 +9,8 @@ sources:
       schema: false
       identifier: false
     tables:
+      - name: TRATBL_sdl_pop6_sg_tasks__null_test
+      - name: TRATBL_sdl_pop6_sg_tasks__duplicate_test
       - name: TRATBL_sdl_pop6_sg_sku_audits__null_test
       - name: TRATBL_sdl_pop6_sg_sku_audits__duplicate_test
       - name: TRATBL_sdl_sg_scan_data_marketplace__null_test
