--- a/models/india/indwks_integration/sku_recom/_sources_indwks_integration__sku_recom.yml
+++ b/models/india/indwks_integration/sku_recom/_sources_indwks_integration__sku_recom.yml
@@ -31,7 +31,7 @@ sources:
 
   - name: indsdl_raw
     database: "{{ env_var('DBT_ENV_LOAD_DB') }}"
-    schema: snapindsdl_raw
+    schema: indsdl_raw
     quoting:
       database: false
       schema: false
