--- a/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
+++ b/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
@@ -41,7 +41,7 @@ sources:
                 store_failures: true
                 schema: ntawks_integration
       - name: sdl_tw_pos_watson_store
-        tags: ["tw_pos_watson","ingestion"]
+        tags: ["tw_pos","ingestion"]
         tests:
           - test_null:
               not_null_columns: ["store_no","store_name"]
