--- a/models/hcposea/hcposeitg_integration/sector_mapping/_sources_hcposeitg_integration_sector_mapping.yml
+++ b/models/hcposea/hcposeitg_integration/sector_mapping/_sources_hcposeitg_integration_sector_mapping.yml
@@ -20,6 +20,7 @@ sources:
           config:
             store_failures: true
             schema: hcposewks_integration
+            severity: warn
       - test_duplicate:
           select_columns: ["country", "company", "sector"]
           group_by_columns: ["country", "company", "sector"]
@@ -27,3 +28,4 @@ sources:
           config:
             store_failures: true
             schema: hcposewks_integration
+            severity: warn
