--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -74,8 +74,7 @@ tests:
       +severity: warn    
     pacific:
       +severity: warn
-
-      # for hcposea it added to source file level
+# for hcposea test severity configured at source yml file level
 
 models:
   dbt_artifacts:
