--- a/models/asp_regional/aspitg_integration/item/_aspitg_integration__item.yml
+++ b/models/asp_regional/aspitg_integration/item/_aspitg_integration__item.yml
@@ -8,12 +8,12 @@ models:
   - name: aspitg_integration__itg_total_investment_brand_map
     config:
       alias: itg_total_investment_brand_map
-      tags: ["cd_scorecard_table_refresh","ingestion"]
+      tags: ["cd_scorecard_table_refresh","transformation"]
   - name: aspitg_integration__itg_mds_rg_total_investment_ppm
     config:
       alias: itg_mds_rg_total_investment_ppm
-      tags: ["cd_scorecard_table_refresh","ingestion"]
+      tags: ["cd_scorecard_table_refresh","transformation"]
   - name: aspitg_integration__itg_total_investment_fdw
     config:
       alias: itg_total_investment_fdw
-      tags: ["cd_scorecard_table_refresh","ingestion"]
+      tags: ["cd_scorecard_table_refresh","transformation"]
