--- a/models/hcposea/hcposeedw_integration/call/_hcposeedw_integration__call.yml
+++ b/models/hcposea/hcposeedw_integration/call/_hcposeedw_integration__call.yml
@@ -33,7 +33,7 @@ models:
   - name: hcposeedw_integration__vw_rep_call_activity
     config:
       alias: vw_rep_call_activity
-      tags: ["hcp_common_views","transformation"]
+      tags: ["hcp_onesea_edw_load","transformation"]
   
   - name: hcposeedw_integration__wrk_fact_detail_only
     config:
