--- a/models/singapore/sgpitg_integration/_sources_sgpitg_integration_test.yml
+++ b/models/singapore/sgpitg_integration/_sources_sgpitg_integration_test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: sgpwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sgpwks_integration
+    schema: "{{ target.schema if target.name in ('default') else 'sgpwks_integration' }}"
     quoting:
       database: false
       schema: false
