--- a/models/india/inditg_integration/rrl/_sources_inditg_integration__rrl.yml
+++ b/models/india/inditg_integration/rrl/_sources_inditg_integration__rrl.yml
@@ -11,13 +11,41 @@ sources:
     tables:
     - name: sdl_rrl_udcmaster
       tags: ["in_rt_sales","ingestion"]
+      tests:
+        - test_null__ff:
+            not_null_columns: ["udcname","udccode"]
+            name: TRATBL_sdl_rrl_udcmaster__null_test
+            config:
+              store_failures: true
+              schema: indwks_integration
     - name: sdl_rrl_retailer_geocoordinates
       tags: ["in_rt_sales","ingestion"]
+      tests:
+        - test_null__ff:
+            not_null_columns: ["rgc_id"]
+            name: TRATBL_sdl_rrl_retailer_geocoordinates__null_test
+            config:
+              store_failures: true
+              schema: indwks_integration
 
     - name: sdl_rrl_rsdmaster
       tags: ["in_rt_sales","ingestion"]
+      tests:
+        - test_null__ff:
+            not_null_columns: ["rsdcode","rsdname","distributorcode","rsrcode"]
+            name: TRATBL_sdl_rrl_rsdmaster__null_test
+            config:
+              store_failures: true
+              schema: indwks_integration
     - name: sdl_rrl_retailermaster
       tags: ["in_sdlitg_gtsales","ingestion"]
+      tests:
+        - test_null__ff:
+            not_null_columns: ["rsrcode","distributorcode"]
+            name: TRATBL_sdl_rrl_retailermaster__null_test
+            config:
+              store_failures: true
+              schema: indwks_integration
       
   - name: indwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
