--- a/models/india/inditg_integration/udc/_sources_inditg_integration__udc.yml
+++ b/models/india/inditg_integration/udc/_sources_inditg_integration__udc.yml
@@ -11,6 +11,13 @@ sources:
     tables:
     - name: sdl_rrl_udcmapping
       tags: ["in_rt_sales","ingestion"]
+      tests:
+        - test_null__ff:
+            not_null_columns: ["usercode","udccode"]
+            name: TRATBL_sdl_rrl_udcmapping__null_test
+            config:
+              store_failures: true
+              schema: indwks_integration
 
     - name: sdl_csl_udcmaster
       tags: ["in_sdlitg_salescube_master","ingestion"]
