multifile logic dense_rank rrl sdl tables

--- a/models/india/inditg_integration/_sources_inditg_integration__test.yml
+++ b/models/india/inditg_integration/_sources_inditg_integration__test.yml
@@ -55,6 +55,7 @@ sources:
     - name: TRATBL_sdl_rrl_ruralstoreorderdetail__null_test
     - name: TRATBL_sdl_rrl_ruralstoreorderheader__null_test
     - name: TRATBL_sdl_rrl_retailermaster__null_test
+    - name: TRATBL_sdl_rrl_udcmapping__null_test
 
       
      
