--- a/models/india/inditg_integration/_sources_inditg_integration__test.yml
+++ b/models/india/inditg_integration/_sources_inditg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: indwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sm05_workspace
+    schema: indwks_integration
 
     quoting:
       database: false
