--- a/models/asp_regional/aspwks_integration/pop6/_aspwks_integration__pop6.yml
+++ b/models/asp_regional/aspwks_integration/pop6/_aspwks_integration__pop6.yml
@@ -418,18 +418,18 @@ models:
     config:
       alias: wks_pop6_tw_product_attribute_audits
       tags: ["pop6_master_load", "ingestion"]
-  - name: aspwks_integration__wks_pop6_hk_product_group_lists
-    config:
-      alias: wks_pop6_hk_product_group_lists
-      tags: ["pop6_master_load", "ingestion"]
-  - name: aspwks_integration__wks_pop6_kr_product_group_lists
-    config:
-      alias: wks_pop6_kr_product_group_lists
-      tags: ["pop6_master_load", "ingestion"]
-  - name: aspwks_integration__wks_pop6_tw_product_group_lists
-    config:
-      alias: wks_pop6_tw_product_group_lists
-      tags: ["pop6_master_load", "ingestion"]
+  # - name: aspwks_integration__wks_pop6_hk_product_group_lists
+  #   config:
+  #     alias: wks_pop6_hk_product_group_lists
+  #     tags: ["pop6_master_load", "ingestion"]
+  # - name: aspwks_integration__wks_pop6_kr_product_group_lists
+  #   config:
+  #     alias: wks_pop6_kr_product_group_lists
+  #     tags: ["pop6_master_load", "ingestion"]
+  # - name: aspwks_integration__wks_pop6_tw_product_group_lists
+  #   config:
+  #     alias: wks_pop6_tw_product_group_lists
+  #     tags: ["pop6_master_load", "ingestion"]
   - name: aspwks_integration__wks_pop6_hk_product_groups_lists
     config:
       alias: wks_pop6_hk_product_groups_lists
