--- a/models/asp_regional/aspedw_integration/sales/_aspedw_integration__sales.yml
+++ b/models/asp_regional/aspedw_integration/sales/_aspedw_integration__sales.yml
@@ -11,7 +11,7 @@ models:
     config:
       alias: edw_clavis_gb_search_terms_results
       tags: ["rg_clavis","transformation"]
-  - name: aspedw_integration__edw_pca_trans_fact
-    config: 
-      alias: edw_pca_trans_fact
-      tags: ["j_sap_bw_trxn_pca_actuals_wrapper","transformation"]
+  # - name: aspedw_integration__edw_pca_trans_fact
+  #   config: 
+  #     alias: edw_pca_trans_fact
+  #     tags: ["j_sap_bw_trxn_pca_actuals_wrapper","transformation"]
