--- a/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
+++ b/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
@@ -141,10 +141,10 @@ models:
       alias: container_collection_exclude_no
       tags: ["m_dcl_edw_job3","transformation"]
 
-  - name: jpndcledw_integration__cluster_predictionresult
-    config:
-        alias: cluster_predictionresult
-        tags: ["dcl_ml_prediction_load","transformation"]
+  # - name: jpndcledw_integration__cluster_predictionresult
+  #   config:
+  #       alias: cluster_predictionresult
+  #       tags: ["dcl_ml_prediction_load","transformation"]
   - name: jpndcledw_integration__wk01_ua02_behavior01_channel_call
     config:
       alias: wk01_ua02_behavior01_channel_call
