created view list_teiki_remind_new2_v_final

--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -997,3 +997,7 @@ models:
     config:
       alias: tw05kokyarecalc
       tags: ["japan_dcl_views","transformation"]
+  - name: jpndcledw_integration__list_teiki_remind_new2_v_final
+    config:
+      alias: list_teiki_remind_new2_v_final
+      tags: ["japan_dcl_views","transformation"]
