--- a/models/hcposea/hcposeitg_integration/mc_cycle/_sources_hcposeitg_integration_mc_cycle.yml
+++ b/models/hcposea/hcposeitg_integration/mc_cycle/_sources_hcposeitg_integration_mc_cycle.yml
@@ -46,4 +46,123 @@ sources:
           config:
             store_failures: true
             schema: hcposewks_integration
+
             
+    - name: sdl_hcp_osea_mc_cycle_plan
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_plan_id", "country_code"]
+          not_null_columns: ["mc_cycle_plan_id", "country_code"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_plan_id", "country_code"]
+          group_by_columns: ["mc_cycle_plan_id", "country_code"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+
+                    
+    - name: sdl_hcp_osea_mc_cycle_plan_channel
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_plan_channel_id"]
+          not_null_columns: ["mc_cycle_plan_channel_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_channel__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_plan_channel_id", "country_code"]
+          group_by_columns: ["mc_cycle_plan_channel_id", "country_code"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_channel__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+            
+            
+                           
+    - name: sdl_hcp_osea_mc_cycle_plan_product
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_plan_product_id"]
+          not_null_columns: ["mc_cycle_plan_product_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_product__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_plan_product_id", "country_code"]
+          group_by_columns: ["mc_cycle_plan_product_id", "country_code"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_product__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+
+                    
+    - name: sdl_hcp_osea_mc_cycle_plan_summary
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_plan_summary_id"]
+          not_null_columns: ["mc_cycle_plan_summary_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_summary__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_plan_summary_id"]
+          group_by_columns: ["mc_cycle_plan_summary_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_summary__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+            
+
+            
+    - name: sdl_hcp_osea_mc_cycle_plan_target
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_plan_target_id"]
+          not_null_columns: ["mc_cycle_plan_target_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_target__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_plan_target_id", "country_code"]
+          group_by_columns: ["mc_cycle_plan_target_id", "country_code"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_plan_target__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+
+                            
+    - name: sdl_hcp_osea_mc_cycle_product
+      tags: ["iconnect_data_ingestion","ingestion"]
+      tests:
+      - test_null:
+          select_columns: ["mc_cycle_product_id"]
+          not_null_columns: ["mc_cycle_product_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_product__null_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+      - test_duplicate:
+          select_columns: ["mc_cycle_product_id"]
+          group_by_columns: ["mc_cycle_product_id"]
+          name: TRATBL_sdl_hcp_osea_mc_cycle_product__duplicate_test
+          config:
+            store_failures: true
+            schema: hcposewks_integration
+            
+
+            
+      
