lidar view materialize

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -578,6 +578,9 @@ models:
         pos:
           view:
             +materialized: view
+        lidar:
+          view:
+            +materialized: view
       inditg_integration:
         +materialized: table
         +transient: false
