--- a/models/asp_regional/aspwks_integration/inventory_health/_aspwks_integration__inventory_health.yml
+++ b/models/asp_regional/aspwks_integration/inventory_health/_aspwks_integration__inventory_health.yml
@@ -39,3 +39,7 @@ models:
     config:
       alias: wks_india_inventory_health_analysis_propagation_final
       tags: ["j_ap_china_reg_data_refresh","transformation"]
+  - name: aspwks_integration__wks_hk_inventory_health_analysis_propagation_prestep
+    config: 
+      alias: wks_hk_inventory_health_analysis_propagation_final
+      tags: ["j_ap_ph_reg_data_refresh","transformation"]
