--- a/models/india/inditg_integration/_sources_inditg_integration__test.yml
+++ b/models/india/inditg_integration/_sources_inditg_integration__test.yml
@@ -3,8 +3,7 @@ version: 2
 sources:
   - name: indwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: indwks_integration
-    #"{{ target.schema if target.name in ('default') else 'indwks_integration' }}"
+    schema: "{{ target.schema if target.name in ('dev','default') else 'indwks_integration' }}"
 
     quoting:
       database: false
