--- a/models/north_asia/ntaitg_integration/mds/_sources_ntaitg_integration__mds.yml
+++ b/models/north_asia/ntaitg_integration/mds/_sources_ntaitg_integration__mds.yml
@@ -38,8 +38,8 @@ sources:
         tags: ["na_mds_sdl_itg_load","ingestion"]
         tests:
           - test_null:
-              select_columns: ["begin","end","nts_si","offtake_si","tp_si","ciw_si"]
-              not_null_columns: ["begin","end","nts_si","offtake_si","tp_si","ciw_si"]
+              select_columns: ["type_code","begin","end","nts_si","offtake_si","tp_si","ciw_si"]
+              not_null_columns: ["type_code","begin","end","nts_si","offtake_si","tp_si","ciw_si"]
               name: TRATBL_sdl_mds_tw_incentive_schemes__null_test
               config:
                 store_failures: true
