--- a/models/asp_regional/aspwks_integration/comex/_sources_aspwks_integration__comex.yml
+++ b/models/asp_regional/aspwks_integration/comex/_sources_aspwks_integration__comex.yml
@@ -12,6 +12,17 @@ sources:
       - name: edw_market_mirror_fact
       - name: edw_rpt_ecomm_oneview
       - name: edw_reg_inventory_health_analysis_propagation_sync
+
+  - name: aspedw_integration
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: sa9_workspace
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+      - name: ASPEDW_INTEGRATION__EDW_OTIF_CONSUMER_ATTR
+      
   - name: aspitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
     schema: aspitg_integration
