--- a/models/philippines/phlitg_integration/hcp_dashboard/_source_phlitg_integration__hcp_operation.yml
+++ b/models/philippines/phlitg_integration/hcp_dashboard/_source_phlitg_integration__hcp_operation.yml
@@ -15,4 +15,5 @@ sources:
     - name : sdl_mds_ph_hce_portal_target
 
     - name : sdl_mds_ph_hce_product_master
+    - name : sdl_hcp_acommerce_load
 
