--- a/models/thailand/thaitg_integration/pop6/_sources_thaitg_integration__pop6.yml
+++ b/models/thailand/thaitg_integration/pop6/_sources_thaitg_integration__pop6.yml
@@ -86,14 +86,14 @@ sources:
         tags: ["pop6_master_load","ingestion"]
         tests:
           - test_null:
-              not_null_columns: ["visit_id","audit_form_id","section_id","subsection_id","field_id","field_type","response"]
+              not_null_columns: ["visit_id","audit_form_id","section_id","subsection_id","field_id"]
               condition: "and"
               name: TRATBL_sdl_pop6_th_general_audits__null_test
               config:
                 store_failures: true
                 schema: thawks_integration
           - test_duplicate:
-              group_by_columns: ["visit_id","audit_form_id","section_id","subsection_id","field_id"]
+              group_by_columns: ["visit_id","audit_form_id","section_id","subsection_id","field_id","field_type","response"]
               need_counts: "no"
               name: TRATBL_sdl_pop6_th_general_audits__duplicate_test
               config:
