--- a/models/japan/jpnitg_integration/_sources_jpnitg_integration__test.yml
+++ b/models/japan/jpnitg_integration/_sources_jpnitg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: jpnwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: jpnwks_integration
+    schema: "{{ target.schema if target.name in ('dev','default') else 'jpnwks_integration' }}"
     quoting:
       database: false
       schema: false
