--- a/models/malaysia/mysitg_integration/_sources_mysitg_integration__test.yml
+++ b/models/malaysia/mysitg_integration/_sources_mysitg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: myswks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: myswks_integration
+    schema: "{{ target.schema if target.name in ('dev','default') else 'myswks_integration' }}"
     quoting:
       database: false
       schema: false
