--- a/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__tests.yml
+++ b/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__tests.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: ntawks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: ntawks_integration
+    schema: "{{ target.schema if target.name in ('dev','default') else 'ntawks_integration' }}"
     quoting:
       database: false
       schema: false
