--- a/models/asp_regional/aspwks_integration/comex/_sources_aspwks_integration__comex.yml
+++ b/models/asp_regional/aspwks_integration/comex/_sources_aspwks_integration__comex.yml
@@ -10,7 +10,7 @@ sources:
       identifier: false
     tables:
       - name: edw_market_mirror_fact
-      - name: edw_rpt_ecomm_oneview
+     # - name: edw_rpt_ecomm_oneview
       - name: edw_reg_inventory_health_analysis_propagation_sync
   - name: aspitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
