--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -169,7 +169,8 @@ models:
 
   - name: jpndcledw_integration__wqwt17
     config:
-      alias: '"wqwt17戦略商品別売上"'
+      alias: wqwt17戦略商品別売上
+      quote: true
       tags: ["japan_dcl_views","inactive"]
 
   - name: jpndcledw_integration__wqwt36
