Added quote functionality

--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -190,7 +190,8 @@ models:
 
   - name: jpndcledw_integration__wqwt74_p
     config:
-      alias: '"wqwt74戦略商品別売上ｐ"'
+      alias: wqwt74戦略商品別売上ｐ
+      quote: true
       tags: ["japan_dcl_views","inactive"]
 
   - name: jpndcledw_integration__wt34aspacdt
