--- a/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
+++ b/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
@@ -263,5 +263,6 @@ models:
       
   - name: jpndcledw_access__wqwt74
     config:
-      alias: '"wqwt74戦略商品別売上ｐ"'
+      alias: wqwt74戦略商品別売上ｐ
+      quote: true
       tags: ["japan_dcl_views","inactive"]
