Updated quote functionality

--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -169,8 +169,7 @@ models:
 
   - name: jpndcledw_integration__wqwt17
     config:
-      alias: wqwt17戦略商品別売上
-      quote: true
+      alias: '"wqwt17戦略商品別売上"'
       tags: ["japan_dcl_views","inactive"]
 
   - name: jpndcledw_integration__wqwt36
@@ -190,8 +189,7 @@ models:
 
   - name: jpndcledw_integration__wqwt74_p
     config:
-      alias: wqwt74戦略商品別売上ｐ
-      quote: true
+      alias: '"wqwt74戦略商品別売上ｐ"'
       tags: ["japan_dcl_views","inactive"]
 
   - name: jpndcledw_integration__wt34aspacdt
