--- a/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
+++ b/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
@@ -263,6 +263,5 @@ models:
       
   - name: jpndcledw_access__wqwt74
     config:
-      alias: wqwt74戦略商品別売上ｐ
-      quote: true
+      alias: '"wqwt74戦略商品別売上ｐ"'
       tags: ["japan_dcl_views","inactive"]
