Updated references for rpt_regional_scorecard

--- a/models/asp_regional/aspedw_integration/scorecard/_aspedw_integration_scorecard.yml
+++ b/models/asp_regional/aspedw_integration/scorecard/_aspedw_integration_scorecard.yml
@@ -1,9 +1,9 @@
 version: 2
 
 models:
-  - name: aspedw_integration__rpt_regional_scorecard_dbt
+  - name: aspedw_integration__rpt_regional_scorecard
     config:
-      alias: rpt_regional_scorecard_dbt
+      alias: rpt_regional_scorecard
       tags: ["cd_scorecard_table_refresh","transformation"]
   - name: aspedw_integration__rpt_regional_scorecardmsl1
     config:
