--- a/models/philippines/phlitg_integration/hcp_sellout_target/_source_phlitg_integration__hcp_operation.yml
+++ b/models/philippines/phlitg_integration/hcp_sellout_target/_source_phlitg_integration__hcp_operation.yml
@@ -17,3 +17,5 @@ sources:
     - name : sdl_mds_ph_hce_product_master
     - name : sdl_hcp_acommerce_load
 
+    - name : sdl_mds_ph_hce_customer_master
+
