--- a/models/philippines/phlitg_integration/msl/_sources_phlitg_integration__msl.yml
+++ b/models/philippines/phlitg_integration/msl/_sources_phlitg_integration__msl.yml
@@ -13,9 +13,9 @@ sources:
     - name: sdl_ph_non_ise_robinsons_ds_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-        - test_null:
-                select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","ret_nm_prefix"]
+        - test_null_ph_non_ise:
+                select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","ret_nm_prefix","sub_channel"]
                 name: TRATBL_sdl_ph_non_ise_robinsons_ds__null_test
                 filter: " ENCODED_REPORT = '1'"
                 config:
@@ -51,9 +51,9 @@ sources:
     - name: sdl_ph_non_ise_waltermart_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                   name: TRATBL_sdl_ph_non_ise_waltermart__null_test
                   filter: " ENCODED_REPORT = '1'"
                   config:
@@ -89,9 +89,9 @@ sources:
     - name: sdl_ph_non_ise_svi_smc_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                   name: TRATBL_sdl_ph_non_ise_svi_smc__null_test
                   filter: " ENCODED_REPORT = '1'"
                   config:
@@ -127,9 +127,9 @@ sources:
     - name: sdl_ph_non_ise_shm_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+                  select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                  not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                   name: TRATBL_sdl_ph_non_ise_shm__null_test
                   filter: " ENCODED_REPORT = '1'"
                   config:
@@ -165,9 +165,9 @@ sources:
     - name: sdl_ph_non_ise_robinsons_sm_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-                    select_columns:  ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+                    select_columns:  ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                     name: TRATBL_sdl_ph_non_ise_robinsons_sm__null_test
                     filter: " ENCODED_REPORT = '1'"
                     config:
@@ -204,8 +204,8 @@ sources:
       tags: ["ph_non_pos","ingestion"]
       tests:
       - test_null_ph_non_ise:
-                    select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+                    select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                     name: TRATBL_sdl_ph_non_ise_landmark_sm__null_test
                     filter: " ENCODED_REPORT = '1'"
                     config:
@@ -241,7 +241,7 @@ sources:
     - name: sdl_ph_non_ise_super_8_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
+      - test_null_ph_non_ise:
                     select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
                     not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
                     name: TRATBL_sdl_ph_non_ise_super_8__null_test
@@ -279,7 +279,7 @@ sources:
     - name: sdl_ph_non_ise_puregold_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
+      - test_null_ph_non_ise:
                     select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
                     not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
                     name: TRATBL_sdl_ph_non_ise_puregold__null_test
@@ -317,9 +317,9 @@ sources:
     - name: sdl_ph_non_ise_landmark_ds_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-          select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-          not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+          select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+          not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
           name: TRATBL_sdl_ph_non_ise_landmark_ds__null_test
           filter: " ENCODED_REPORT = '1'"
           config:
@@ -355,9 +355,9 @@ sources:
     - name: sdl_ph_non_ise_rustans_test
       tags: ["ph_non_pos","ingestion"]
       tests:
-      - test_null:
-                    select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix"]
-                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code"]
+      - test_null_ph_non_ise:
+                    select_columns: ["filename", "retailer_name", "sku_code", "osa_check_date", "branch_code", "ret_nm_prefix","sub_channel"]
+                    not_null_columns: ["retailer_name","sku_code","osa_check_date","branch_code","sub_channel"]
                     name: TRATBL_sdl_ph_non_ise_rustans__null_test
                     filter: " ENCODED_REPORT = '1'"
                     config:
