--- a/models/india/inditg_integration/pos/_sources_inditg_integration__pos.yml
+++ b/models/india/inditg_integration/pos/_sources_inditg_integration__pos.yml
@@ -38,3 +38,13 @@ sources:
       tags: ["in_key_acct_offtake","transformation"]
     - name: sdl_pos_apollo
       tags: ["in_key_acct_offtake","transformation"]
+    - name: sdl_mt_tp_spends
+      tags: ["in_mt_tp_spends","transformation"]
+      tests:
+        - test_duplicate:
+            group_by_columns: ["account_name","year","mthmm","article_code"]
+            select_columns: ["account_name","year","mthmm","article_code"]
+            name: TRATBL_sdl_mt_tp_spends__duplicate_test
+            config:
+              store_failures: true
+              schema: indwks_integration
