Added model in in YML file

--- a/models/india/inditg_integration/pos/_inditg_integration__pos.yml
+++ b/models/india/inditg_integration/pos/_inditg_integration__pos.yml
@@ -79,4 +79,8 @@ models:
     config:
       alias: sdl_raw_pos_apollo
       tags: ["in_key_acct_offtake","transformation"]
+  - name: inditg_integration__itg_pos_mt_tp_spends
+    config:
+      alias: sdl_raw_pos_apollo
+      tags: ["in_mt_tp_spends","transformation"]
   
