--- a/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
+++ b/models/indonesia/idnitg_integration/distributor/_sources_idnitg_integration__distributor.yml
@@ -26,7 +26,7 @@ sources:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
-    - name: sdl_mds_id_lav_customer_hierarchy
+    - name: sdl_mds_id_lav_customer_hierarchy_adftemp
       tags: ["id_mds_itg_load","ingestion"]
       tests:
           - test_null__ff:
@@ -78,18 +78,18 @@ sources:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
-    - name: sdl_mds_id_ref_province
+    - name: sdl_mds_id_ref_province_adftemp
       tags: ["id_mds_itg_load","ingestion"]
       tests:
           - test_null__ff:
-              not_null_columns: ["prov_id"]
+              not_null_columns: ["code"]
               name: TRATBL_sdl_mds_id_ref_province__null_test
               config:
                 store_failures: true
                 schema: idnwks_integration
                 severity: error
           - test_duplicate__ff:
-              group_by_columns: ["prov_id"]
+              group_by_columns: ["code"]
               name: TRATBL_sdl_mds_id_ref_province__duplicate_test
               config:
                 store_failures: true
