--- a/models/pacific/pcfitg_integration/sales/_sources_pcfitg_integration__sales.yml
+++ b/models/pacific/pcfitg_integration/sales/_sources_pcfitg_integration__sales.yml
@@ -60,6 +60,12 @@ sources:
     tables:
     - name: bwa_weekly_forecast
       tags: ["j_pac_sap_bw_weekly_forecast_file_edw","transformation"]
+      freshness:
+        error_after:
+          count: 7
+          period: day
+        filter: _deleted_='F'
+      loaded_at_field: _CREATETIME_
 
   - name: pcfitg_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
