--- a/models/north_asia/ntaitg_integration/sellout/_sources_ntaitg_integration__sellout.yml
+++ b/models/north_asia/ntaitg_integration/sellout/_sources_ntaitg_integration__sellout.yml
@@ -134,11 +134,21 @@ sources:
                 schema: ntawks_integration
           - test_lookup:
               select_columns: ["year", "dstr_nm", "sub_customer_name", "ean", "cust_cd"]
-              column: "cust_cd,sub_customer_name"
+              column: "trim(cust_cd),trim(sub_customer_name)"
               lookup_column: "trim(customer_code) customer_code, trim(sub_customer_name) sub_customer_name"
               lookup_table: "{{ ref('ntaitg_integration__itg_kr_gt_dpt_daiso') }}"                                                                      
               failure_reason: "'missing customer information data compared with master file: ims_txn_dt, cust_cd, sub_customer_name'"
               name: TRATBL_sdl_kr_daiso_gt_sellout__lookup_test
+              config:
+                store_failures: true
+                schema: ntawks_integration
+          - test_lookup:
+              select_columns: ["year", "dstr_nm", "sub_customer_name", "ean", "cust_cd"]
+              column: "trim(ean)"
+              lookup_column: "trim(ean) ean"
+              lookup_table: "{{ ref('ntaitg_integration__itg_kr_gt_daiso_price') }}"                                                                      
+              failure_reason: "'missing ean records compared with price master file'"
+              name: TRATBL_sdl_kr_daiso_gt_sellout__lookup_test2
               config:
                 store_failures: true
                 schema: ntawks_integration
