--- a/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
+++ b/models/north_asia/ntaitg_integration/pos/_sources_ntaitg_integration__pos.yml
@@ -335,3 +335,9 @@ sources:
       identifier: false
     tables:
       - name: bwa_kr_list_price
+        freshness:
+          error_after:
+            count: 7
+            period: day
+          filter: _deleted_='F'
+        loaded_at_field: _CREATETIME_
